test: characterize existing balance updates